<resources>
    <string name="app_name">NearByMe</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nearby_restaurants">Nearby Restaurants</string>
    <string name="nearby_parks">Nearby Parks</string>
    <string name="parking">Parking</string>
    <string name="restaurants">restaurants</string>
    <string name="weather">weather</string>
    <string name="nearby_parking">Nearby parking</string>
    <string name="parks">parks</string>
    <string name="Parks">Parks</string>
    <string name="Restaurants">Restaurants</string>
    <string name="price_level_1_5">Price Level 1-5</string>
    <string name="rating">Rating ⭐ - ⭐⭐⭐⭐</string>
    <string name="restaurantName">TextView</string>
    <string name="image_of_restaurant">image Of restaurant</string>
    <string name="weather_image">weather-image</string>
    <string name="feels_like">Feels Like :</string>
    <string name="placesimage">placesImage</string>
    <string name="icon_google_maps">icon_google_maps</string>
    <string name="view_in_google_maps">view in google maps</string>
    <string name="view_in_waze">View in Waze</string>
    <string name="no_internet_connection">No Internet Connection, please check your\n Internet Connection and try again.</string>
    <string name="try_again">TRY AGAIN</string>
</resources>