<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.restaurant.RestaurantDetailsFragment">

    <TextView
        android:id="@+id/priceLevelD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/streetName"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@+id/priceLevel" />

    <ImageView
        android:id="@+id/imageRestaurant"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/image_of_restaurant"
        android:maxWidth="350dp"
        android:maxHeight="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameOfRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/restaurantName"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageRestaurant" />

    <TextView
        android:id="@+id/ratingD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="TextView"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/streetName"
        app:layout_constraintEnd_toStartOf="@+id/priceLevel"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/ratingD"
        app:layout_constraintEnd_toStartOf="@+id/priceLevel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfRestaurant"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/priceLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_level_1_5"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/priceLevelD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@+id/nameOfRestaurant"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/streetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/priceLevelD"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/ratingD"
        app:layout_constraintTop_toBottomOf="@+id/nameOfRestaurant"
        app:layout_constraintVertical_bias="0.487"
        tools:text="TextView" />
</androidx.constraintlayout.widget.ConstraintLayout>